[metadata]
name = cern-ironic-hardware-manager
author = Mateusz Kowalski
author-email = mateusz.kowalski@cern.ch
summary = CERN OnMetal Hardware Manager Implementation
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python

[files]
packages =
    cern_ironic_hardware_manager

[entry_points]
ironic_python_agent.hardware_managers =
    cern = cern_ironic_hardware_manager:CernHardwareManager
